@@ -11,6 +11,8 @@ nplan (0.32~17.10.4) UNRELEASED; urgency=medium
     can be used. (LP: #1732002)
   * doc/netplan.md: Clarify the behavior for time-based values for bonds
     and bridges. (LP: #1756587)
+  * critical: provide a way to set "CriticalConnection=true" on a networkd
+    connection, especially for remote-fs scenarios. (LP: #1769682)
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Thu, 19 Apr 2018 11:17:54 -0400
 
